src/test/deca/context/invalid/homemade/arith_op_not_number.deca
// Description :
//test of arithmetic operation between operands that are not int or float
//
// Resultats :
//Erreur contextuelle
//Ligne <12> : <Arithmetic operands must be int or float and are boolean and int>
{
   boolean a = false;
   int b=2;

   // Doit etre refuse.
   b = a*b;
}